--- a/ManoTranslator/ManoTranslator/MainWindow.xaml
+++ b/ManoTranslator/ManoTranslator/MainWindow.xaml
@@ -4,9 +4,27 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ManoTranslator"
-        mc:Ignorable="d"
+        xmlns:prism="http://prismlibrary.com/"             
+        prism:ViewModelLocator.AutoWireViewModel="True"
+        mc:Ignorable="d"   
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="0.5*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0" Text="入力" FontSize="20"/>
+        <TextBox Grid.Row="1" Text="{Binding InputText.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AcceptsReturn="True" TextWrapping="Wrap"/>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Height="30" Margin="5">
+            <Button Command="{Binding EncodeCommand}" Width="100" Margin="30,0" Grid.Row="1" Content="ほわっ　むんっ"/>
+            <Button Command="{Binding DecodeCommand}" Width="100" Margin="30,0" Grid.Row="1" Content="にほんご"/>
+        </StackPanel>
+        <TextBlock Grid.Row="3" Text="出力" FontSize="20"/>
+        <TextBox Grid.Row="4" Text="{Binding OutputText.Value}" TextWrapping="Wrap"/>
+
     </Grid>
 </Window>
